# pypotrace

./: .gitignore  CONTRIBUTORS  LICENSE  MANIFEST.in  README.rst  build.py  cysetuptools.py  pyproject.toml  requirements-tests.txt  setup.cfg  setup.py
doc/: Makefile  classes.rst  conf.py  index.rst  make.bat  ref.rst  tutorial.rst
doc/_build/doctrees/: classes.doctree  environment.pickle  index.doctree  ref.doctree  tutorial.doctree
doc/_build/html/: .buildinfo  classes.html  genindex.html  index.html  modindex.html  objects.inv  ref.html  search.html  searchindex.js  tutorial.html
doc/_build/html/_sources/: classes.txt  index.txt  ref.txt  tutorial.txt
doc/_build/html/_static/: default.css
potrace/: __init__.py  _potrace.c  _potrace.pxd  _potrace.pyx  backend.pxd  bezier.cpp  bezier.pxd  bezier.pyx  svg.pyx
potrace/agg/: basics.pxd  curves.cpp  curves.pxd  curves.pyx
tests/: test_basic.py  test_bezier.py  test_xml.py
