[tool.poetry]
name = "potrace"
version = "0.3"
description = "potrace Python bindings"
readme = "README.rst"
authors = ["Luper Rouch <luper.rouch@gmail.com>"]
license = "GPL"
keywords = ["potrace", "bitmap", "vector", "graphics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]
include = [
    {path = "potrace/*.pxd"},
    {path = "potrace/*.pyx"},
    {path = "potrace/agg/*.pxd"},
    {path = "potrace/agg/*.pyx"}
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "*"
numpy = "*"

[tool.poetry.dev-dependencies]
Cython = "*"
Pillow = "*"
nose = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel", "setuptools", "Cython", "numpy"]
build-backend = "poetry.core.masonry.api"
