[metadata]
name = pypotrace
version = 0.3
description = potrace Python bindings
long_description = file: README.rst
keywords = potrace bitmap vector graphics
author = Luper Rouch
author_email = luper.rouch@gmail.com
url = http://github.com/flupke/pypotrace
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Graphics :: Graphics Conversion

[options]
packages = find:
setup_requires = cython
install_requires = numpy

[options.extras_require]
dev =
    nose
    pillow
    cython<0.29

[options.packages.find]
exclude = *.tests *.tests.* tests.* tests

[cython-module: potrace._potrace]
sources = potrace/_potrace.pyx
include_dirs = eval(__import__('numpy').get_include())
libraries = potrace

[cython-module: potrace.bezier]
sources = potrace/bezier.pyx
language = c++
include_dirs = eval(__import__('numpy').get_include())
pkg_config_packages = libagg

[cython-module: potrace.svg]
sources = potrace/svg.pyx
language = c++
include_dirs = eval(__import__('numpy').get_include())

[cython-module: potrace.agg.curves]
sources = potrace/agg/curves.pyx
language = c++
pkg_config_packages = libagg
